--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="190dp"
-android:background="@drawable/gogs_logo"
-android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="190dp"
+                android:background="@drawable/gogs_logo"
+                android:orientation="vertical">
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:id="@+id/profile_image"
                                                   android:layout_width="76dp"
@@ -18,7 +18,7 @@ android:orientation="vertical">
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Akash Bangad"
+              android:text="Cobbleopolis"
               android:textSize="14sp"
               android:textColor="#FFF"
               android:textStyle="bold"
@@ -31,7 +31,7 @@ android:orientation="vertical">
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Akash.bangad93@gmail.com"
+              android:text="cobbleopolis@gmail.com"
               android:id="@+id/email"
               android:gravity="left"
               android:layout_marginBottom="8dp"
