--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="190dp"
-                android:background="@drawable/gogs_logo"
+                app:theme="@style/AppTheme"
+                android:background="@drawable/header"
                 android:orientation="vertical">
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:id="@+id/profile_image"
@@ -18,9 +20,8 @@
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Cobbleopolis"
+              android:text="@string/loading_text"
               android:textSize="14sp"
-              android:textColor="#FFF"
               android:textStyle="bold"
               android:gravity="left"
               android:paddingBottom="4dp"
@@ -31,12 +32,11 @@
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="cobbleopolis@gmail.com"
+              android:text="@string/loading_text"
               android:id="@+id/email"
               android:gravity="left"
               android:layout_marginBottom="8dp"
               android:textSize="14sp"
-              android:textColor="#fff"
               android:layout_alignParentBottom="true"
               android:layout_alignLeft="@+id/username"
               android:layout_alignStart="@+id/username" />
