--- a/app/src/main/res/layout/frag_settings.xml
+++ b/app/src/main/res/layout/frag_settings.xml
@@ -2,11 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:focusableInTouchMode="false"
+              android:id="@+id/button_signOut">
 
     <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New CheckBox"
             android:id="@+id/checkBox"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_button_signOut"
+            android:id="@+id/settings_button_signOut"
+            android:layout_gravity="center_horizontal"/>
 </LinearLayout>
