Changed the RepoFragment to be a ListFragment

--- a/app/src/main/res/layout/frag_repos.xml
+++ b/app/src/main/res/layout/frag_repos.xml
@@ -10,4 +10,10 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
             android:id="@+id/textView2"/>
+    <ListView
+            android:id="@android:id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:drawSelectorOnTop="false"
+            style="@style/AppTheme"/>
 </LinearLayout>
