Added in profile fragment and other things

--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -5,14 +5,11 @@
               android:layout_height="match_parent" android:id="@+id/frag_home">
 
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/textView"/>
-    <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/repoList"/>
+    <ListView
+            android:id="@android:id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:drawSelectorOnTop="false"
+            style="@style/AppTheme"/>
 
 </LinearLayout>
