--- a/app/src/main/res/layout/frag_settings.xml
+++ b/app/src/main/res/layout/frag_settings.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" android:focusableInTouchMode="false"
+              android:layout_height="fill_parent" android:focusableInTouchMode="false"
               android:id="@+id/button_signOut">
 
     <CheckBox
@@ -11,7 +11,7 @@
             android:text="New CheckBox"
             android:id="@+id/checkBox"/>
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:text="@string/settings_button_signOut"
             android:id="@+id/settings_button_signOut"
